--- a/public/sass/_form.scss
+++ b/public/sass/_form.scss
@@ -1,7 +1,6 @@
 input,
 select,
 textarea {
-  // margin: 20px 0 20px 0;
   border-radius: $br;
   border: solid 2px var(--milk);
   display: block;
@@ -15,15 +14,29 @@ textarea {
     outline: 0;
     color: var(--text);
   }
+
   ::placeholder {
     color: #fcfaf480;
     opacity: 1;
   }
 }
+
 input,
 select {
   height: 60px;
 }
+
+select {
+  -moz-appearance: none; /* Firefox */
+  -webkit-appearance: none; /* Safari and Chrome */
+  appearance: none;
+  background: transparent;
+  background-image: url("data:image/svg+xml;utf8,<svg fill='white' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+  background-repeat: no-repeat;
+  background-position-x: calc(100% - 10px);
+  background-position-y: 50%;
+}
+
 textarea {
   height: 100px;
   resize: none;
